syntax = "proto3";

package io.harness.product.ci.addon.proto;

option java_multiple_files = true;
option go_package = "ciaddonpb";

import "product/ci/addon/proto/progress.proto";

enum ErrorType {
  NO_ERROR = 0;
  NETWORK_ERROR = 1;
  AUTHENTICATION_ERROR = 2;
}

enum ArtifactType {
  S3 = 0;
  GCS = 1;
  JFROG = 2;

  // Docker registries
  GCR = 3;
  ECR = 4;
  DOCKERHUB = 5;
}

enum AuthType {
  BASIC_AUTH = 0;
  SECRET_FILE = 1;
}

message Error {
  ErrorType error = 1;
  string description = 2;
}

// Task global unique identifier
message TaskId {
  string id = 1;
}

// Details of connector
message Connector {
  string id = 1;
  AuthType auth = 2;
}

// Details on where to upload files/images
message DestinationArtifact {
  string destination = 1;
  Connector connector = 2;
  ArtifactType artifact_type = 3;
}

// Details of image to build
message BuildImage {
  string docker_file = 1;  // local Dockerfile used to build the image
  string image = 2;        // name of the image to build
  string tag = 3;          // tag of the image to build
}

// Details of files to upload
message UploadFiles {
  string file_pattern = 1;              // Wild-card file pattern to be uploaded
  DestinationArtifact destination = 2;  // location to copy the file
}

message BuildUploadImage {
  BuildImage image = 1;
  DestinationArtifact destination = 2;
}

message PublishArtifactsRequest {
  TaskId task_id = 1;
  repeated UploadFiles files = 2;
  repeated BuildUploadImage images = 3;
}

message PublishArtifactsResponse {
}

message TaskProgressRequest {
  TaskId task_id = 1;
}

message TaskProgressResponse {
  TaskStatus current_stage = 1;
  Error error = 2;
}

message TaskProgressUpdatesRequest {
  TaskId task_id = 1;
}

message TaskProgressUpdatesResponse {
  TaskStatus current_stage = 1;
  Error error = 2;
}

service CIAddon {
  // Asynchronous RPC to upload files as well as build docker images and publish them
  // It takes a list of files/file_patterns and uploads them to a destination location
  // It also takes a list of local Dockerfiles, builds them and upload to specified destination location
  // call RPC TaskProgress() or TaskProgressUpdates() with this task_id to get the status
  rpc PublishArtifacts(PublishArtifactsRequest) returns (PublishArtifactsResponse);

  // Synchronous RPC to get progress of a given task_id
  rpc TaskProgress(TaskProgressRequest) returns (TaskProgressResponse);

  // Streaming RPC to get periodic progress updates of a given task_id.
  rpc TaskProgressUpdates(TaskProgressUpdatesRequest) returns (stream TaskProgressUpdatesResponse);
}
